Fixed styling: conditional USD symbol. Link to show active timers. Checkbox alignment

--- a/client/src/styles/admin.css
+++ b/client/src/styles/admin.css
@@ -26,6 +26,11 @@ input.admin{
 
 .checkBox {
     padding-top: 20px;
-    text-align: center;
+    text-align: left;
     font-size: 12px;
+    margin-right: 25px;
+}
+
+.width90{
+    width: 95%;
 }
